# xiao_esp32c3_ap_tcp_server

./: .gitignore  .gitignore:Zone.Identifier  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  xiao_esp32c3_ap_tcp_server.code-workspace
main/: CMakeLists.txt  Kconfig.projbuild  ble_init.c  ble_init.h  bsp.c  bsp.h  bsp_buzzer_pwm.c  bsp_gpio.c  bsp_i2c.c  bsp_lcd_ssd1306.c  bsp_lcd_ssd1306.h  bsp_periodic_task.c  bsp_rtc_pcf8563.c  bsp_rtc_pcf8563.h  bsp_tcp_msg_parser.c  bsp_tcp_server.c  bsp_uart.h  bsp_uart_rx_task.c  softap_example_main.c  xiao_esp32c3_ap_tcp_server.code-workspace
main/cli/: cli.c  cli.h  cli_command.c  cli_command.h
main/oled_ssd1306/: ssd1306.h  ssd1306_driver.c  ssd1306_i2c.c
main/rtc/: timegm.h
