idf_component_register(SRCS     "cli/cli.c" 
                                "cli/cli_command.c"
                                "oled_ssd1306/ssd1306_i2c.c" "oled_ssd1306/ssd1306_driver.c" "bsp_lcd_ssd1306.c" 
                                "rtc/timegm.c" 
                                "bsp_rtc_pcf8563.c"
                                "bsp_i2c.c" 
                                "bsp_uart_rx_task.c" 
                                "bsp_tcp_server.c" 
                                "softap_example_main.c" 
                                "bsp_periodic_task.c" 
                                "bsp_tcp_msg_parser.c"
                                "bsp.c"
                                "bsp_gpio.c"
                                "bsp_buzzer_pwm.c"
                    INCLUDE_DIRS "."
                    INCLUDE_DIRS "../"
                    )
